# JIT_course

./: CMakeLists.txt  Makefile  README.md  basic_block.cpp  basic_block.hpp  fact.cpp  graph.cpp  graph.hpp  instruction.hpp  ir_builder.hpp
includes/: basic_block.hpp  basic_block_marker.hpp  dfs.hpp  domin_tree.hpp  function.hpp  graph.hpp  instruction.hpp  instruction_ext.hpp  ir_builder.hpp  linorder.hpp  liveinterval.hpp  liveness.hpp  liverange.hpp  loop.hpp  loop_tree.hpp  opcode.hpp  optimizer.hpp  regalloc.hpp  regs.hpp  rpo.hpp  type.hpp
src/: basic_block.cpp  dfs.cpp  domin_tree.cpp  function.cpp  graph.cpp  instruction.cpp  instruction_ext.cpp  ir_builder.cpp  linorder.cpp  liveness.cpp  loop_tree.cpp  optimizer.cpp  regalloc.cpp  rpo.cpp
tests/: CMakeLists.txt  dfs_test.cpp  domin_tree_test.cpp  domintree_test.cpp  fact_test.cpp  loop_test.cpp  rpo_test.cpp
tests/domin_tree_tests/: README.md  domin_tree_test.cpp
tests/factorial_test/: fact_test.cpp
tests/linorder_tests/: README.md  linorder_test.cpp
tests/liveness_tests/: liveness_test.cpp
tests/loop_tests/: README.md  loop_test.cpp
tests/optimizer_tests/: optimizer_checks_elimination_test.cpp  optimizer_constfold_test.cpp  optimizer_inlining_test.cpp  optimizer_peephole_test.cpp  optimizer_test.cpp
tests/regalloc_test/: regalloc_test.cpp
tests/rpo_tests/: rpo_test.cpp
